--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "main.cpp"
-                    INCLUDE_DIRS "")
+idf_component_register(SRCS "main.cpp" 
+                            "hal/hal_m5paper.cpp"
+                       INCLUDE_DIRS "." "hal")
